--- a/styles/index.scss
+++ b/styles/index.scss
@@ -28,7 +28,7 @@ main {
   height: 100vh;
   overflow-y: scroll;
   scroll-behavior: smooth;
-  scroll-snap-type: y proximity;
+  scroll-snap-type: y mandatory;
 
   section {
     scroll-snap-align: center;
