--- a/styles/2d.scss
+++ b/styles/2d.scss
@@ -2,6 +2,7 @@
   position: relative;
 
   .box {
+    text-align: center;
     position: absolute;
     top: 50%;
     left: 50%;
@@ -9,11 +10,33 @@
     margin-left: -50px;
     height: 100px;
     width: 100px;
-    background-color: #ee4;
+    font-weight: bold;
+    line-height: 100px;
+    color: #fff;
+    font-size: 17px;
+    text-shadow: 1px 1px 1px #000;
     transition: all 500ms;
-  }
-}
 
-#rotate-div {
-  transform-origin: 0 0;
+    &#scale-div {
+      background-color: rgb(238, 177, 10);
+    }
+
+    &#translate-div {
+      background-color: rgb(224, 30, 159);
+    }
+
+    &#rotate-div {
+      background-color: rgb(233, 66, 54);
+      transform-origin: 0 100%;
+    }
+
+    &#skew-div {
+      background-color: rgb(121, 226, 51);
+    }
+
+    &#reflect-div {
+      background-color: rgb(43, 165, 221);
+      transition: none;
+    }
+  }
 }
