--- a/styles/3d.scss
+++ b/styles/3d.scss
@@ -11,6 +11,6 @@
     width: 100px;
     background-color: #ee4;
     transition: all 500ms;
-    transform: rotateX(40deg);
+    perspective: (800px);
   }
 }
