--- a/styles/3d.scss
+++ b/styles/3d.scss
@@ -12,5 +12,6 @@
     background-color: #ee4;
     transition: all 500ms;
     // box-shadow: 10px 10px 10px 10px grey;
+    box-shadow: 0px 15px 10px -15px #111;
   }
 }
