--- a/styles/3d.scss
+++ b/styles/3d.scss
@@ -2,6 +2,7 @@
   position: relative;
 
   .box {
+    text-align: center;
     position: absolute;
     top: 50%;
     left: 50%;
@@ -9,9 +10,26 @@
     margin-left: -50px;
     height: 100px;
     width: 100px;
-    background-color: #ee4;
+    font-weight: bold;
+    line-height: 100px;
+    color: #fff;
+    font-size: 17px;
+    text-shadow: 1px 1px 1px #000;
     transition: all 500ms;
     // box-shadow: 10px 10px 10px 10px grey;
-    box-shadow: 0px 15px 10px -15px #111;
+    box-shadow: 15px 15px 10px -15px #111;
+
+    &#scale-div {
+      background-color: rgb(238, 177, 10);
+    }
+
+    &#translate-div {
+      background-color: rgb(224, 30, 159);
+    }
+
+    &#rotate-div {
+      background-color: rgb(233, 66, 54);
+      transform-origin: 0 100%;
+    }
   }
 }
